Mon May 21 10:09:34 BST 2007  Olly Betts <olly@survex.com>

	* tests/harness/testsuite.h: Put quotes around strings when reporting
	  a failure in TEST_STRINGS_EQUAL().

Mon May 21 10:08:18 BST 2007  Olly Betts <olly@survex.com>

	* tests/internaltest.cc: New tests serialiseerror1 which checks that
	  the handling of errno/error_string.
	* common/serialise.h: Make unserialise_error externally visible for
	  new test.

Mon May 21 08:40:06 BST 2007  Olly Betts <olly@survex.com>

	* HACKING: Update release checklist.

Fri May 18 02:10:39 BST 2007  Olly Betts <olly@survex.com>

	* generate-exceptions.in: Fix grammatical errors in Error::get_errno()
	  deprecation explanation.

Thu May 17 23:51:17 BST 2007  Olly Betts <olly@survex.com>

	* api/error.cc: Need <stdlib.h> for free() to build with GCC 4.3
	  snapshot.

Thu May 17 23:11:53 BST 2007  Olly Betts <olly@survex.com>

	* NEWS: Fix line wrapping (ok, isn't wasn't final!)

Thu May 17 22:28:44 BST 2007  Olly Betts <olly@survex.com>

	* NEWS: Final update before release.

Thu May 17 19:10:27 BST 2007  Olly Betts <olly@survex.com>

	* configure.ac: Bump version to 1.0.0 and update LIBRARY_VERSION_INFO.

Thu May 17 19:10:11 BST 2007  Olly Betts <olly@survex.com>

	* NEWS: Minor wording tweak.

Thu May 17 19:06:34 BST 2007  Olly Betts <olly@survex.com>

	* docs/Makefile.am: Run rst2html with --strict --verbose options to
	  reject .rst files with problems.
	* docs/deprecation.rst: Add more entries gleaned from the NEWS file.

Thu May 17 18:30:01 BST 2007  Olly Betts <olly@survex.com>

	* NEWS: Update with fixes from Jenny's proof-reading and a few other
	  tweaks.

Thu May 17 18:27:53 BST 2007  Olly Betts <olly@survex.com>

	* AUTHORS: Update.

Thu May 17 18:25:39 BST 2007  Olly Betts <olly@survex.com>

	* PLATFORMS: Updates from the tinderbox.

Thu May 17 18:08:13 BST 2007  Olly Betts <olly@survex.com>

	* common/safesysstat.h: Need the 2 argument mkdir() wrapper for Mingw