@@ -1,3 +1,12 @@
+Mon May 21 10:26:01 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* tests/queryparsertest.cc: Remove FIXME from test_qp_flag_partial1:
+	  I've checked that the results look correct.  New test
+	  test_qp_value_range3, to test the NumberValueRangeProcessors -
+	  currently fails because "10" is considered to be between "1" and
+	  "2".
+	* include/xapian/query.h: Fix typo in documentation comment.
+
 Mon May 21 10:09:34 BST 2007  Olly Betts <olly@survex.com>
 
 	* tests/harness/testsuite.h: Put quotes around strings when reporting
